--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-streamlit==1.29.0
-pandas==2.1.4
-numpy==1.24.3
-plotly==5.17.0
-scikit-learn==1.3.2
-imbalanced-learn==0.11.0
-datetime
-warnings
-pickle-mixin==1.0.2
+streamlit>=1.29.0
+pandas>=2.1.0,<2.2.0
+numpy>=1.26.0,<2.0.0
+plotly>=5.17.0
+scikit-learn>=1.3.0
+imbalanced-learn>=0.11.0
